# Modern-Python-Cookbook-Third-Edition

./: README.md  pyproject.toml  requirements.in  requirements.txt  tox.ini
data/: binned.csv  ch14_r02_temporary.toml  ch14_r03.csv  ch14_r04.csv  output_0.csv  output_1.csv  output_2.csv  output_3.csv  output_4.csv  output_5.csv  output_6.csv  output_7.csv  output_8.csv  output_9.csv  route.tmp  summary.md  tide-table-2024.txt  x.csv  x.toml  x12.csv  y.md  y12.md
data/ch14/: markov_0.csv  markov_1.csv  markov_2.csv  markov_3.csv  markov_4.csv  markov_5.csv  markov_6.csv  markov_7.csv  markov_8.csv  markov_9.csv  sample_0.csv  sample_1.csv  sample_2.csv  sample_3.csv  sample_4.csv  sample_5.csv  sample_6.csv  sample_7.csv  sample_8.csv  sample_9.csv
src/ch01/: Text Products for SMW Issued by AKQ.html  recipe_01.txt  recipe_02.txt  recipe_03.txt  recipe_04.txt  recipe_05.txt  recipe_06.txt  recipe_07.txt  recipe_08.txt  recipe_09.txt  recipe_10.txt  recipe_11.txt  recipe_12.txt
src/ch02/: recipe_00.txt  recipe_01.txt  recipe_02.txt  recipe_03.txt  recipe_04.txt  recipe_05.py  recipe_06.txt  recipe_07.txt  recipe_08.txt  recipe_09.txt  recipe_10.txt
src/ch03/: recipe_01.py  recipe_01_reveal.py  recipe_02.py  recipe_03.py  recipe_04.py  recipe_05.py  recipe_06.py  recipe_07.py  recipe_07_bad.py  recipe_08.py  recipe_09.py  recipe_10.py  recipe_11.py  recipe_11_main_1.py  recipe_11_main_2.py
src/ch04/: recipe_01.py  (+9 more)
src/ch16/: README.md  pyproject.toml  requirements-test.txt  requirements.txt
src/ch16/recipe_05/: README.md  pyproject.toml  tox.ini
src/ch16/recipe_05/tests/: __init__.py  test_recipe_05.py
(+180 files in other folders)
